<resources>
    <string name="app_name">SoftwareSolutionsSquad</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="existing_user">Already have an account?</string>
    <string name="welcome_header">MANAGE YOUR HOUSEHOLD INVENTORY</string>
    <string name="welcome_subtext">Unlock the power of organization and peace with HomeTrack.</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="order_options">
        <item>Date ASC</item>
        <item>Date DESC</item>
        <item>DESCR ASC</item>
        <item>DESCR DESC</item>
        <item>Make ASC</item>
        <item>Make DESC</item>
        <item>EST_VAL ASC</item>
        <item>EST_VAL DESC</item>
        <item>TAG ASC</item>
        <item>TAG DESC</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="close">Close</string>
</resources>