<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgot_page_forgot_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40sp"
        android:paddingStart="40sp"
        android:paddingTop="40sp"
        android:paddingEnd="40sp"
        android:text="@string/forgot_password"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/forgot_page_email_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="35sp"
        android:text="@string/email_address"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/forgot_page_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/forgot_page_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:backgroundTint="@color/app_blue"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/forgot_page_back_click_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>