<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signup_page_signup_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40sp"
        android:paddingStart="40sp"
        android:paddingTop="40sp"
        android:paddingEnd="40sp"
        android:text="@string/sign_up"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/signup_page_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="35sp"
        android:text="@string/name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_page_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signup_page_signup_email_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="35sp"
        android:text="@string/email_address"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_page_signup_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/signup_page_signup_password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="35sp"
        android:text="@string/password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_page_signup_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_page_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:backgroundTint="@color/app_blue"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/signup_page_existing_user_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/existing_user"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/signup_page_existing_user_click_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>