<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
     android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/welcome_page_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:src="@drawable/logo" />


    <TextView
        android:id="@+id/welcome_page_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="50sp"
        android:text="@string/welcome_header"
        android:layout_marginHorizontal="40sp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_page_subtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:text="@string/welcome_subtext"
        android:textAlignment="center"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40sp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="40sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/welcome_page_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_weight="1"
            android:backgroundTint="@color/app_blue"
            android:text="@string/login" />

        <Button
            android:id="@+id/welcome_page_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/sign_up" />
    </LinearLayout>
</LinearLayout>
</ScrollView>